--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "mongoose": "^5.4.10",
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
