--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
+    "mongoose": "^5.4.11",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "passport-local": "^1.0.0"
   }
 }
