--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-sha3": "^0.8.0",
     "mongoose": "^5.4.11",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0"
