--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,11 @@
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
+    "react-google-button": "^0.5.3",
     "react-phone-input-2": "^2.7.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
