deleted the db container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
     environment:
      - NODE_ENV=development
      - CHOKIDAR_USEPOLLING=true
-    links:
-     - db
+     - MONGODB_URI=mongodb+srv://Rolando:rolando@cluster0-e8mbp.mongodb.net/test?retryWrites=true
   app:
     build:
       context: ./
@@ -29,10 +28,3 @@ services:
      - CHOKIDAR_USEPOLLING=true
     links:
      - ws
-  db:
-    image: mongo:4.0.5
-    container_name: db
-    ports:
-     - "27017:27017"
-    volumes:
-     - ./db:/data/db
